test/valid/array-idx.js
var x = [0,1,2];
var y = [3,4];

var z = [x[0], y[0]];
