test/invalid/array-idx.js
var x = [0,1,2];
var y = ['a','b'];

var z = [x[0], y[0]];
